@@ -15,6 +15,12 @@
 	* lisp/sawfish/wm/xmodmap.jl: xmodmap module, supports loading a
 	modmap file, saving original state and restoring original state
 
+	* lisp/sawfish/wm/xsettingsd.jl: xsettigsd module, handles a
+	xsettingsd instance during a sawfish session
+
+	* lisp/sawfish/wm/xgamma.jl: xgamma module, allows changing gamma
+	settings from sawfishrc
+
 2012-09-06  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/state/transient.jl: :after-set for
 	decorate-transients
